<resources>
    <string name="app_name">MovieCenter</string>

    <!-- Menu -->
    <string name="menu_search_text">Search</string>
    <string name="menu_login_text">Login</string>
    <string name="menu_profile_text">Profile</string>
    <string name="menu_my_posts_text">My Posts</string>
    <string name="menu_logout_text">Logout</string>
    <string name="search_movie_hint">Search movie</string>

    <!-- Sign in -->
    <string name="sign_in_small_header_text">Please sign in to continue</string>
    <string name="sign_in_big_header_text">Login</string>
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="error_invalid_email_length">Please enter valid email</string>
    <string name="error_invalid_password_length">Please enter 6–20 letters password</string>

    <!-- Login options -->
    <string name="login_sign_in_with_google_text">Sign in with google</string>
    <string name="login_sign_in_with_email_text">Sign in with email</string>
    <string name="login_sign_up_button_text">Sign up</string>
    <string name="web_client_id">1081210416441-in054ffkomiqgqdqefsg630tcj61lr14.apps.googleusercontent.com</string>

    <!-- Sign up -->
    <string name="sign_up_password_edittext">Password</string>
    <string name="sign_up_password_confirm_edittext">Confirm Password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_up_email_edittext">Email</string>
    <string name="sign_up_username_string">Username</string>
    <string name="sign_up_big_header_text">Register</string>
    <string name="sign_up_small_header_text">Create new account</string>
    <string name="error_email_already_in_use">We\'re sorry, this email is taken</string>
    <string name="error_password_confirm">Passwords don\'t match</string>
    <string name="error_invalid_username_length">Please enter 3–15 letters username</string>
    <string name="error_invalid_email">Please enter a valid email</string>

    <!-- Profile page -->
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="profile_save_button">SAVE</string>

    <!-- New post -->
    <string name="movie_details_related_posts_label">Related posts:</string>
    <string name="new_post_movie_name_hint">Movie Name</string>
    <string name="new_post_year_hint">Year</string>
    <string name="new_post_movie_poster_label">Movie Poster:</string>
    <string name="new_post_movie_image_label">Movie Image:</string>
    <string name="new_post_how_was_your_experience_label">How was your experience?</string>
    <string name="error_invalid_movie_name">Please enter movie name</string>
    <string name="error_invalid_movie_year">Please enter movie year</string>

    <!-- Post -->
    <string name="username">@%1$s</string>
    <string name="movie_name_and_year">%1$s (%2$d) </string>

    <!-- My Posts -->
    <string name="warning_title">Warning</string>
    <string name="warning_message">Are you sure you want to delete this post?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>