<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr">

    <!-- Search view widget as item in menu -->
    <item
        android:id="@+id/search_bar"
        android:title="@string/menu_search_text"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_login"
        android:orderInCategory="100"
        android:title="@string/menu_login_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:title="@string/menu_profile_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_my_posts"
        android:orderInCategory="100"
        android:title="@string/menu_my_posts_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout_text"
        app:showAsAction="never" />
</menu>