<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_fragment"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_big_header_text"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="40sp">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_small_header_text"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            android:textSize="20sp">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/sign_in_email_inputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/sign_in_email_hint"
            android:textColorHint="@color/pink300"
            app:errorEnabled="true"
            app:startIconDrawable="@android:drawable/sym_action_email">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/sign_in_password_inputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/sign_in_password_hint"
            android:textColorHint="@color/pink300"
            app:errorEnabled="true"
            app:startIconDrawable="@android:drawable/ic_lock_lock">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/sign_in_sign_in_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/sign_in_button_text"
            android:layout_marginTop="10dp"
            android:background="@drawable/customwhitebutton"
            android:textColor="#FFFBF6"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>