<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_options_fragment"
    tools:context=".LoginOptionsFragment"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/app_icon"
            >
        </ImageView>

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/login_sign_in_with_email_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/login_sign_in_with_email_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/customloginbutton"
            android:textColor="#FFFBF6"/>

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/login_sign_in_with_google_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/login_sign_in_with_google_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/customwhitebutton"
            android:textColor="@color/pink300"/>

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/login_sign_up_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/login_sign_up_button_text"
            android:layout_marginTop="10dp"
            android:background="@drawable/customloginbutton"
            android:textColor="#FFFBF6"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>