<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/activity_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:src="@drawable/default_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_profile_username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/profile_username">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_profile_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/profile_email">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/sign_in_sign_in_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/profile_save_button"
            android:layout_marginTop="40dp"
            android:background="@drawable/customloginbutton"
            android:textColor="#FFFBF6"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>